# kurashi

./: .gitignore  README.md  setup.cfg  tox.ini
.github/workflows/: test.yml
kurashi/: aeon_bank.py  cli.py  sbi.py  tepco.py  utils.py  water.py  zaim.py
