[metadata]
name = kurashi
version = 0.0.1
classfiers =
    Programming Launguage :: Python :: 3

[options]
packages = find:
install_requires =
    click
    mojimoji
    requests
    beautifulsoup4

[options.entry_points]
console_scripts =
    kurashi = kurashi.cli:main

[options.extras_require]
test = tox; flake8
